--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.266.0",
+    "@aws-sdk/lib-dynamodb": "^3.266.0",
     "express": "^4.18.2",
     "serverless-http": "^3.1.1"
   }
