--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aws-sdk/client-dynamodb": "^3.266.0",
     "@aws-sdk/lib-dynamodb": "^3.266.0",
     "express": "^4.18.2",
-    "serverless-http": "^3.1.1"
+    "serverless-http": "^3.1.1",
+    "uuid": "^9.0.0"
   }
 }
